--- a/assn1/src/main/resources/templates/account/home.html
+++ b/assn1/src/main/resources/templates/account/home.html
@@ -26,12 +26,12 @@
         <th>Date</th>
     </tr>
     <tr th:each="recipe : ${recipes}">
-        <td><p th:text="*{id}"></p></td>
-        <td><p th:text="*{name}"></p></td>
+        <td><p th:text="*{recipe.id}"></p></td>
+        <td><p th:text="*{recipe.name}"></p></td>
 <!--        <td><p th:text="*{user.date}"></p></td>-->
     </tr>
 </table>
-<a th:href="@{/newrecipe}"><button class="w-50 btn btn btn-primary m-1" >New Recipe</button></a>
+<a th:href="${'/' + user.id + '/newrecipe'}"><button class="w-50 btn btn btn-primary m-1" >New Recipe</button></a>
 
 
 </body>
