--- a/assn1/src/main/resources/templates/account/home.html
+++ b/assn1/src/main/resources/templates/account/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="icon" href="data:,">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 <table class="table">
@@ -31,8 +32,9 @@
 <!--        <td><p th:text="*{user.date}"></p></td>-->
     </tr>
 </table>
-<a th:href="${'/' + user.id + '/newrecipe'}"><button class="w-50 btn btn btn-primary m-1" >New Recipe</button></a>
+<a th:href="@{'/' + ${user.id.toString()} + '/newrecipe'}"><button class="w-50 btn btn btn-primary m-1" >New Recipe</button></a>
 
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
