--- a/assn1/src/main/resources/templates/account/home.html
+++ b/assn1/src/main/resources/templates/account/home.html
@@ -7,32 +7,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<table class="table">
-    <tr>
-        <th>Id</th>
-        <th>User</th>
-        <th>Pass</th>
-    </tr>
-    <tr th:object="${user}">
-        <td><p th:text="*{id}"></p></td>
-        <td><p th:text="*{username}"></p></td>
-        <td><p th:text="*{password}"></p></td>
-    </tr>
-</table>
-<h2>Recipes</h2>
-<table class="table">
-    <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Date</th>
-    </tr>
-    <tr th:each="recipe : ${recipes}">
-        <td><p th:text="*{recipe.id}"></p></td>
-        <td><p th:text="*{recipe.name}"></p></td>
-<!--        <td><p th:text="*{user.date}"></p></td>-->
-    </tr>
-</table>
-<a th:href="@{'/' + ${user.id.toString()} + '/newrecipe'}"><button class="w-50 btn btn btn-primary m-1" >New Recipe</button></a>
+<div class="container">
+    <table class="table">
+        <tr>
+            <th>Id</th>
+            <th>User</th>
+            <th>Pass</th>
+        </tr>
+        <tr th:object="${user}">
+            <td><p th:text="*{id}"></p></td>
+            <td><p th:text="*{username}"></p></td>
+            <td><p th:text="*{password}"></p></td>
+        </tr>
+    </table>
+    <h2>Recipes</h2>
+    <table class="table">
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Date</th>
+        </tr>
+        <tr th:each="recipe : ${recipes}">
+            <td><p th:text="*{recipe.id}"></p></td>
+            <td><p th:text="*{recipe.name}"></p></td>
+            <!--        <td><p th:text="*{user.date}"></p></td>-->
+        </tr>
+    </table>
+    <a th:href="@{'/' + ${user.id.toString()} + '/newrecipe'}"><button class="w-50 btn btn btn-primary m-1" >New Recipe</button></a>
+
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
