--- a/assn1/src/main/resources/templates/account/home.html
+++ b/assn1/src/main/resources/templates/account/home.html
@@ -12,7 +12,7 @@
         <tr>
             <th>Id</th>
             <th>User</th>
-            <th>Pass</th>
+            <th>Passwords</th>
         </tr>
         <tr th:object="${user}">
             <td><p th:text="*{id}"></p></td>
@@ -26,10 +26,15 @@
             <th>Id</th>
             <th>Name</th>
             <th>Date</th>
+            <th>ingredients</th>
+            <th>directions</th>
         </tr>
         <tr th:each="recipe : ${recipes}">
             <td><p th:text="*{recipe.id}"></p></td>
             <td><p th:text="*{recipe.name}"></p></td>
+            <td><p th:text="*{recipe.date}"></p></td>
+            <td><p th:text="*{recipe.ingredients}"></p></td>
+            <td><p th:text="*{recipe.directions}"></p></td>
             <!--        <td><p th:text="*{user.date}"></p></td>-->
         </tr>
     </table>
