--- a/assn1/src/main/resources/templates/account/home.html
+++ b/assn1/src/main/resources/templates/account/home.html
@@ -7,33 +7,59 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
-    <table class="table">
-        <tr>
-            <th>Id</th>
-            <th>User</th>
-            <th>Pass</th>
-        </tr>
-        <tr th:object="${user}">
-            <td><p th:text="*{id}"></p></td>
-            <td><p th:text="*{username}"></p></td>
-            <td><p th:text="*{password}"></p></td>
-        </tr>
-    </table>
-    <h2>Recipes</h2>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{'/'+ ${user.id.toString()}}">Recipes</a>
+        <form class="d-flex">
+            <a th:href="@{'/'+ ${user.id.toString()} + '/search'}" class="btn btn-sm btn-outline-success m-1">Search</a>
+            <a th:href="@{'/'}" class="btn btn-sm btn-outline-danger m-1">Sign Out</a>
+        </form>
+    </div>
+</nav>
+<div class="container my-3">
+
+    <h1 th:text="${'Welcome ' + user.username + '!'}"></h1>
+    <br />
+<!--    <h2>Your Favourite Recipes</h2>-->
+<!--    <table class="table">-->
+<!--        <tr>-->
+<!--            <th>Id</th>-->
+<!--            <th>Name</th>-->
+<!--            <th>Ingredients</th>-->
+<!--            <th>Directions</th>-->
+<!--            <th>User</th>-->
+<!--            <th>Action</th>-->
+<!--        </tr>-->
+<!--        <tr th:each="recipe : ${favourites}">-->
+<!--            <td><p th:text="*{recipe.id}"></p></td>-->
+<!--            <td><p th:text="*{recipe.name}"></p></td>-->
+<!--            <td><p th:text="*{recipe.ingredients}"></p></td>-->
+<!--            <td><p th:text="*{recipe.directions}"></p></td>-->
+<!--            <td><p th:text="*{recipe.user.username}"></p></td>-->
+<!--            <td><a th:href="@{'/' + ${user.id.toString()} + '/view/' + ${recipe.id}}"><button class="btn btn btn-primary m-1" >View</button></a></td>-->
+<!--        </tr>-->
+<!--    </table>-->
+    <h2>Your Recipes</h2>
     <table class="table">
         <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>Date</th>
+            <th>Ingredients</th>
+            <th>Directions</th>
+            <th>Action</th>
         </tr>
         <tr th:each="recipe : ${recipes}">
             <td><p th:text="*{recipe.id}"></p></td>
             <td><p th:text="*{recipe.name}"></p></td>
-            <!--        <td><p th:text="*{user.date}"></p></td>-->
+            <td><p th:text="*{recipe.ingredients}"></p></td>
+            <td><p th:text="*{recipe.directions}"></p></td>
+            <td>
+                <a th:href="@{'/' + ${user.id.toString()} + '/view/' + ${recipe.id}}"><button class="btn btn btn-primary m-1" >View</button></a>
+                <a th:href="@{'/' + ${user.id.toString()} + '/delete/' + ${recipe.id}}"><button class="btn btn btn-danger m-1" >Delete</button></a>
+            </td>
         </tr>
     </table>
-    <a th:href="@{'/' + ${user.id.toString()} + '/newrecipe'}"><button class="w-50 btn btn btn-primary m-1" >New Recipe</button></a>
+    <a th:href="@{'/' + ${user.id.toString()} + '/newrecipe'}"><button class="btn btn btn-primary m-1" >New Recipe</button></a>
 
 </div>
 
