--- a/assn1/src/main/resources/templates/account/signin.html
+++ b/assn1/src/main/resources/templates/account/signin.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="text-center">
-<div class="container my-5 align-middle text-center">
+<div class="container my-5 align-middle text-center" style="max-width: 400px;">
     <main class="form-signin align-middle">
         <form th:action="@{/signin}" th:object="${user}" method="post">
-            <h1 class="h3 mb-3 fw-normal m-2">Recipes App</h1>
+            <h1 class="h1 mb-3 fw-normal m-2">Recipes App</h1>
             <div class="input-group m-1">
                 <span class="input-group-text" id="basic-addon1">Username</span>
                 <input type="text" class="form-control" id="username" placeholder="username" th:field="*{username}" name="username" aria-describedby="basic-addon1">
