--- a/assn1/src/main/resources/templates/account/signup.html
+++ b/assn1/src/main/resources/templates/account/signup.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="text-center">
-<div class="container my-5 align-middle text-center">
+<div class="container my-5 align-middle text-center" style="max-width: 400px;">
     <main class="form-signin align-middle">
         <form th:action="@{/signup}" th:object="${user}" method="post">
             <h1 class="h2 mb-3 fw-normal">Sign Up</h1>
