--- a/assn1/src/main/resources/templates/recipe/new.html
+++ b/assn1/src/main/resources/templates/recipe/new.html
@@ -7,37 +7,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
-    <main class="form-signin align-middle">
-        <form th:action="@{'/' + ${userId} + '/newrecipe'}" th:object="${recipe}" method="post">
-            <h1 class="h3 mb-3 fw-normal m-2">New Recipe</h1>
-            <div class="input-group p-1">
-                <span class="input-group-text" id="name-label">Name</span>
-                <input type="text" class="form-control" id="name" placeholder="Name" th:field="*{name}" name="name" aria-describedby="name-addon">
-                <!--                <label for="name">Name</label>-->
-            </div>
-<!--            <div class="input-group p-1">-->
-<!--                <span class="input-group-text" id="date-addon">Date</span>-->
-<!--                <input type="date" field="*{date}" name="date" class="form-control" id="date" placeholder="Date" aria-describedby="date-addon"/>-->
-<!--                &lt;!&ndash;                <label for="Date">Date</label>&ndash;&gt;-->
-<!--            </div>-->
-<!--            <div class="input-group p-1">-->
-<!--                <span class="input-group-text">Ingredients</span>-->
-<!--                <textarea class="form-control" name="ingredients" id="ingredients" field="*{ingredients}" aria-label="Ingredients"></textarea>-->
-<!--                &lt;!&ndash;                <label for="ingredients">Ingredients</label>&ndash;&gt;-->
-<!--            </div>-->
-<!--            <div class="input-group p-1">-->
-<!--                <span class="input-group-text">Directions</span>-->
-<!--                <textarea class="form-control" name="directions" id="directions" field="*{directions}" aria-label="Directions"></textarea>-->
-<!--                &lt;!&ndash;                <label for="directions">Directions</label>&ndash;&gt;-->
-<!--            </div>-->
-            <button class="w-50 btn btn-primary m-1" type="submit" value="Submit">Add</button>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{'/'+ ${user.id.toString()}}">Recipes</a>
+        <form class="d-flex">
+            <a th:href="@{'/'}" class="btn btn-sm btn-outline-danger m-1">Sign Out</a>
         </form>
-    <a th:href="@{'/' + ${userId}}"><button class="w-50 btn btn-secondary m-1" href="/signup">Cancel</button></a>
-    </main>
+    </div>
+</nav>
+<div class="container my-3">
+<main class="form-signin align-middle">
+    <form th:action="@{'/' + ${userId} + '/newrecipe'}" th:object="${recipe}" method="post">
+        <h1 class="h3 mb-3 fw-normal m-2">New Recipe</h1>
+        <div class="input-group p-1">
+            <span class="input-group-text" id="name-label">Name</span>
+            <input type="text" class="form-control" id="name" placeholder="Name" th:field="*{name}" name="name" aria-describedby="name-addon">
+        </div>
+        <div class="input-group p-1">
+            <span class="input-group-text">Ingredients</span>
+            <textarea class="form-control" name="ingredients" id="ingredients" th:field="*{ingredients}" style="height: 15vh" aria-label="Ingredients"></textarea>
+        </div>
+        <div class="input-group p-1">
+            <span class="input-group-text">Directions</span>
+            <textarea class="form-control" name="directions" id="directions" th:field="*{directions}" style="height: 30vh" aria-label="Directions"></textarea>
+        </div>
+        <div class="align-center mx-auto text-center">
+            <button class="btn btn-lg btn-primary m-1" type="submit" value="Submit">Add</button>
+            <a th:href="@{'/' + ${userId}}"><button class="btn btn-lg btn-secondary m-1" href="/signup">Cancel</button></a>
+        </div>
+
+    </form>
+</main>
 </div>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
