--- a/assn1/src/main/resources/templates/account/signin.html
+++ b/assn1/src/main/resources/templates/account/signin.html
@@ -5,26 +5,28 @@
     <title>Sign in to Recipes</title>
     <link rel="icon" href="data:,">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/signin.css}"/>
 </head>
 <body class="text-center">
-<div class="container my-5 align-middle text-center" style="max-width: 400px;">
-    <main class="form-signin align-middle">
+    <main class="form-signin">
         <form th:action="@{/signin}" th:object="${user}" method="post">
             <h1 class="h1 mb-3 fw-normal m-2">Recipes App</h1>
-            <div class="input-group m-1">
-                <span class="input-group-text" id="basic-addon1">Username</span>
-                <input type="text" class="form-control" id="username" placeholder="username" th:field="*{username}" name="username" aria-describedby="basic-addon1">
-            </div>
-            <div class="input-group m-1">
-                <span class="input-group-text" id="basic-addon2">Password</span>
-                <input type="password" th:field="*{password}" name="password" class="form-control" id="password" placeholder="Password" aria-describedby="basic-addon2"/>
-            </div>
-            <button class="w-50 btn btn-lg btn-primary m-1" type="submit">Sign in</button>
-        </form>
-        <a th:href="@{/signup}"><button class="w-50 btn btn-lg btn-secondary m-1" href="/signup">Create Account</button></a>
-    </main>
-</div>
+            <h1 class="h4 mb-3 fw-normal">Please sign in</h1>
 
+            <div class="form-floating">
+                <input type="text" class="form-control" id="floatingInput" placeholder="username" th:field="*{username}" >
+                <label for="floatingInput">Username</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" th:field="*{password}" >
+                <label for="floatingPassword">Password</label>
+            </div>
+
+            <button class="w-100 btn btn-lg btn-primary my-1" type="submit">Sign in</button>
+
+        </form>
+        <a th:href="@{/signup}"><button class="w-100 btn btn-lg btn-secondary my-1">Sign Up</button></a>
+    </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
