--- a/assn1/src/main/resources/templates/recipe/search.html
+++ b/assn1/src/main/resources/templates/recipe/search.html
@@ -19,7 +19,7 @@
     <form th:action="@{'/' + ${userId} + '/search'}" method="get">
         <div class="input-group">
             <input type="text" id="search" placeholder="Search" name="search" class="form-control m-1" th:value="${search}"/>
-            <button type="submit" class="btn btn-primary">Search</button>
+            <button type="submit" class="btn btn-primary m-1">Search</button>
         </div>
     </form>
     <br />
