--- a/assn1/src/main/resources/templates/recipe/delete.html
+++ b/assn1/src/main/resources/templates/recipe/delete.html
@@ -24,7 +24,7 @@
         <br />
         <div class="align-center mx-auto text-center">
             <button class="btn btn-lg btn-danger m-1" type="submit" value="Submit">Delete</button>
-            <a th:href="@{'/' + ${userId}}"><button class="btn btn-lg btn-primary m-1">Cancel</button></a>
+            <a th:href="@{'/' + ${userId}}"><button class="btn btn-lg btn-primary m-1" type="button" name="cancel" value="cancel">Cancel</button></a>
         </div>
     </form>
 </div>
