--- a/assn1/src/main/resources/templates/recipe/new.html
+++ b/assn1/src/main/resources/templates/recipe/new.html
@@ -18,10 +18,14 @@
 <div class="container my-3">
 <main class="form-signin align-middle">
     <form th:action="@{'/' + ${userId} + '/newrecipe'}" th:object="${recipe}" method="post">
-        <h1 class="h3 mb-3 fw-normal m-2">New Recipe</h1>
+        <h1 class="h2 mb-3 fw-normal m-2">New Recipe</h1>
         <div class="input-group p-1">
             <span class="input-group-text" id="name-label">Name</span>
             <input type="text" class="form-control" id="name" placeholder="Name" th:field="*{name}" name="name" aria-describedby="name-addon">
+        </div>
+        <div class="form-check form-switch m-1">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" th:field="*{share}" checked>
+            <label class="form-check-label" for="flexSwitchCheckChecked">Make publicly available</label>
         </div>
         <div class="input-group p-1">
             <span class="input-group-text">Ingredients</span>
@@ -35,7 +39,6 @@
             <button class="btn btn-lg btn-primary m-1" type="submit" value="Submit">Add</button>
             <a th:href="@{'/' + ${userId}}"><button class="btn btn-lg btn-secondary m-1" href="/signup">Cancel</button></a>
         </div>
-
     </form>
 </main>
 </div>
