Added sign in/up error messages

--- a/assn1/src/main/resources/templates/account/signup.html
+++ b/assn1/src/main/resources/templates/account/signup.html
@@ -12,7 +12,10 @@
     <form th:action="@{/signup}" th:object="${user}" method="post">
         <h1 class="h1 mb-3 fw-normal m-2">Recipes App</h1>
         <h1 class="h4 mb-3 fw-normal">Sign Up</h1>
-
+        <div th:if="${error}" class="alert alert-danger d-flex alert-dismissible fade show" role="alert">
+            <div><strong>User already exists</strong></div>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         <div class="form-floating">
             <input type="text" class="form-control" id="floatingInput" placeholder="username" th:field="*{username}" >
             <label for="floatingInput">Username</label>
@@ -21,9 +24,7 @@
             <input type="password" class="form-control" id="floatingPassword" placeholder="Password" th:field="*{password}" >
             <label for="floatingPassword">Password</label>
         </div>
-
         <button class="w-100 btn btn-lg btn-primary my-1" type="submit">Sign Up</button>
-
     </form>
     <a th:href="@{/signin}"><button class="w-100 btn btn-lg btn-secondary my-1">Cancel</button></a>
 </main>
