--- a/assn1/src/main/resources/templates/account/signin.html
+++ b/assn1/src/main/resources/templates/account/signin.html
@@ -12,7 +12,10 @@
         <form th:action="@{/signin}" th:object="${user}" method="post">
             <h1 class="h1 mb-3 fw-normal m-2">Recipes App</h1>
             <h1 class="h4 mb-3 fw-normal">Please sign in</h1>
-
+            <div th:if="${error}" class="alert alert-danger d-flex alert-dismissible fade show" role="alert">
+                <div><strong>Incorrect credentials</strong></div>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
             <div class="form-floating">
                 <input type="text" class="form-control" id="floatingInput" placeholder="username" th:field="*{username}" >
                 <label for="floatingInput">Username</label>
@@ -21,12 +24,12 @@
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password" th:field="*{password}" >
                 <label for="floatingPassword">Password</label>
             </div>
-
             <button class="w-100 btn btn-lg btn-primary my-1" type="submit">Sign in</button>
-
         </form>
         <a th:href="@{/signup}"><button class="w-100 btn btn-lg btn-secondary my-1">Sign Up</button></a>
     </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script>
+</script>
 </body>
 </html>
