Fixed new lines for viewing recipe

--- a/assn1/src/main/resources/templates/account/error.html
+++ b/assn1/src/main/resources/templates/account/error.html
@@ -10,7 +10,7 @@
 <div class="container my-3" >
     <div class="row text-center my-5">
         <h3>Oops...</h3>
-        <h5>Something went wrong, but you can go back</h5>
+        <h5 class="m-2">Something went wrong, but you can go back</h5>
         <a th:href="@{'/'}"><button class="btn btn-lg btn-primary">Login</button></a>
     </div>
 </div>
