--- a/assn1/src/main/resources/templates/meal/new.html
+++ b/assn1/src/main/resources/templates/meal/new.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>View Recipe</title>
+    <title>New Meal</title>
     <link rel="icon" href="data:,">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -15,22 +15,22 @@
         </form>
     </div>
 </nav>
-<div class="container my-3" th:object="${recipe}">
-    <h1>View Recipe</h1>
-    <br />
-    <h1 th:text="*{name}"></h1>
-    <br />
-    <h5 th:text="*{ingredients}" style="white-space: pre;"></h5>
-    <p th:text="*{directions}" style="white-space: pre;"></p>
-
-<!--    <a th:href="@{'/' + ${user.id.toString()}}"><button class="btn btn btn-primary m-1" >Back</button></a>-->
-    <div class="d-grid gap-2 d-md-block align-center mx-auto text-cener">
-<!--        <button class="btn btn-lg btn-primary m-1" type="submit" value="Submit">Add</button>-->
-        <a th:href="@{'/' + ${userId}}"><button class="btn btn-secondary m-1">Back</button></a>
-    </div>
+<div class="container my-3">
+    <main class="form-signin align-middle">
+        <form th:action="@{'/' + ${userId} + '/newmeal/' + ${recipeId}}" th:object="${meal}" method="post">
+            <h1 class="h2 mb-3 fw-normal my-2">New Meal</h1>
+            <h4 th:text="${'For meal: ' + recipe.getName()}"></h4>
+            <div class="input-group p-1">
+                <span class="input-group-text">Date</span>
+                <input type="date" class="form-control" name="date" id="date" th:field="*{date}" aria-label="date"></input>
+            </div>
+            <div class="align-center mx-auto text-center">
+                <button class="btn btn-lg btn-primary m-1" type="submit" value="Submit">Add</button>
+                <a th:href="@{'/' + ${userId}}"><button class="btn btn-lg btn-secondary m-1">Cancel</button></a>
+            </div>
+        </form>
+    </main>
 </div>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
