Added meal planning

--- a/assn1/src/main/resources/templates/account/error.html
+++ b/assn1/src/main/resources/templates/account/error.html
@@ -11,7 +11,7 @@
     <div class="row text-center my-5">
         <h3>Oops...</h3>
         <h5 class="m-2">Something went wrong, but you can go back</h5>
-        <a th:href="@{'/'}"><button class="btn btn-lg btn-primary">Login</button></a>
+        <a th:href="@{'/'}"><button class="btn btn-lg btn-primary m-2">Login</button></a>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
