--- a/assn1/src/main/resources/templates/account/home.html
+++ b/assn1/src/main/resources/templates/account/home.html
@@ -17,32 +17,45 @@
     </div>
 </nav>
 <div class="container my-3">
-
     <h1 th:text="${'Welcome ' + user.username + '!'}"></h1>
+    <br />
+    <h2>Your Planned Meals</h2>
+    <table class="table">
+        <tr>
+            <th>Name</th>
+            <th>Date</th>
+            <th>Ingredients</th>
+            <th>Action</th>
+        </tr>
+        <tr th:each="meal : ${meals}">
+            <td><p th:text="*{meal.recipe.name}"></p></td>
+            <td><p th:text="*{meal.date}"></p></td>
+            <td><p th:text="*{meal.recipe.ingredients}"></p></td>
+            <td><a th:href="@{'/' + ${user.id.toString()} + '/view/' + ${meal.recipe.id}}"><button class="btn btn-primary m-1" >View</button></a></td>
+        </tr>
+    </table>
     <br />
     <h2>Your Favourite Recipes</h2>
     <table class="table">
         <tr>
             <th>Name</th>
             <th>Ingredients</th>
-            <th>Directions</th>
             <th>Action</th>
+            <th>Meal</th>
             <th>Favourite</th>
-<!--            <th>Meal</th>-->
         </tr>
         <tr th:each="recipe : ${favourites}">
             <td><p th:text="*{recipe.name}"></p></td>
             <td><p th:text="*{recipe.ingredients}"></p></td>
-            <td><p th:text="*{recipe.directions}"></p></td>
             <td><a th:href="@{'/' + ${user.id.toString()} + '/view/' + ${recipe.id}}"><button class="btn btn btn-primary m-1" >View</button></a></td>
+            <td>
+                <a th:href="@{'/' + ${user.id.toString()} + '/newmeal/' + ${recipe.id}}"><button class="btn btn-warning m-1" >Add</button></a>
+            </td>
             <td>
                 <form th:action="@{'/' + ${user.id.toString()} + '/fav/' + ${recipe.id}}" method="post">
                     <button class="btn btn-danger m-1" type="submit">Remove</button>
                 </form>
             </td>
-<!--            <td>-->
-<!--                <a th:href="@{'/' + ${user.id.toString()} + '/newmeal/' + ${recipe.id}}"><button class="btn btn-warning m-1" >Add</button></a>-->
-<!--            </td>-->
         </tr>
     </table>
     <br />
@@ -52,7 +65,8 @@
             <th>Name</th>
             <th>Public</th>
             <th>Ingredients</th>
-            <th>Directions</th>
+            <th>Meal</th>
+            <th>Favourite</th>
             <th>Action</th>
         </tr>
         <tr th:each="recipe : ${recipes}">
@@ -62,7 +76,15 @@
                 <p th:case="false">No</p>
             </td>
             <td><p th:text="*{recipe.ingredients}"></p></td>
-            <td><p th:text="*{recipe.directions}"></p></td>
+            <td>
+                <a th:href="@{'/' + ${user.id.toString()} + '/newmeal/' + ${recipe.id}}"><button class="btn btn-warning m-1" >Add</button></a>
+            </td>
+            <td th:switch="${user.containsFavourite(recipe)}">
+                <form th:action="@{'/' + ${user.id.toString()} + '/fav/' + ${recipe.id}}" method="post">
+                    <button th:case="true" class="btn btn btn-danger m-1" type="submit" >Remove</button>
+                    <button th:case="false" class="btn btn btn-success m-1" type="submit">Add</button>
+                </form>
+            </td>
             <td>
                 <a th:href="@{'/' + ${user.id.toString()} + '/view/' + ${recipe.id}}"><button class="btn btn btn-primary m-1" >View</button></a>
                 <a th:href="@{'/' + ${user.id.toString()} + '/delete/' + ${recipe.id}}"><button class="btn btn btn-danger m-1" >Delete</button></a>
@@ -70,9 +92,7 @@
         </tr>
     </table>
     <a th:href="@{'/' + ${user.id.toString()} + '/newrecipe'}"><button class="btn btn btn-primary m-1" >New Recipe</button></a>
-
 </div>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
