--- a/assn1/src/main/resources/templates/meal/new.html
+++ b/assn1/src/main/resources/templates/meal/new.html
@@ -32,7 +32,7 @@
             </div>
             <div class="align-center mx-auto text-center">
                 <button class="btn btn-lg btn-primary m-1" type="submit" value="Submit">Add</button>
-                <a th:href="@{'/' + ${userId}}"><button class="btn btn-lg btn-secondary m-1">Cancel</button></a>
+                <a th:href="@{'/' + ${userId}}"><button class="btn btn-lg btn-secondary m-1" type="button" name="cancel" value="cancel">Cancel</button></a>
             </div>
         </form>
     </main>
